--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "realtime-cha",
+  "name": "chat-website",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a real-time chat website that allows users to connect with each other and chat in real-time. It was built using the MERN stack (MongoDB, Express.js, React.js, and Node.js), Socket.io, Redux Toolkit, and Tailwind CSS.",
   "main": "index.js",
+  "dependencies": {},
+  "devDependencies": {
+    "@babel/cli": "^7.22.9",
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "babel-loader": "^9.1.3",
+    "prettier": "^3.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ShakirFarhan/Realtime-Chat.git"
+  },
+  "author": "Shakir Farhan",
   "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.3",
-    "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
-    "express": "^4.21.1",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.11.4",
-    "sequelize": "^6.37.5",
-    "sequelize-cli": "^6.6.2",
-    "socket.io": "^4.8.1"
-  }
+  "bugs": {
+    "url": "https://github.com/ShakirFarhan/Realtime-Chat/issues"
+  },
+  "homepage": "https://github.com/ShakirFarhan/Realtime-Chat#readme"
 }
